js/js.translator/testData/incremental/invalidation/functionTypeInterfaceReflect/lib1/B.0.kt
object B {
    public fun testFunction(x1: Any, x2: Any, x3: Any, x4: Any, x5: Any, x6: Any) { }
}
